# looi

./: .travis.yml  LICENSE  README.md  looi.cabal  stack.yaml
src/: Binops.hs  CoreTypes.hs  Interpreter.hs  Main.hs  Parser.hs  SExp.hs
test/: BinopsSpec.hs  CoreTypesSpec.hs  InterpreterSpec.hs  Main.hs  ParserSpec.hs  SExpSpec.hs
