name:                looi
version:             0.1.0.0
synopsis:            assignment 4 for Cal Poly's CSC 430-2158
description:         Please see README.md
homepage:            https://github.com/wchargin/looi#readme
license:             MIT
license-file:        LICENSE
author:              William Chargin
maintainer:          wchargin@gmail.com
copyright:           per MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable looi
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transformers
                     , parsec
                     , parsec-numbers == 0.1.0
  default-language:    Haskell2010

test-suite looi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , containers
                     , mtl
                     , transformers
                     , parsec
                     , parsec-numbers == 0.1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wchargin/looi
